--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "echo-test": "echo \"Error: no test specified\" && exit 1",
     "server": "nodemon server",
     "start": "react-scripts start",
+    "start-dev": "nodemon server & react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
